# celsiusbot

./: README.md  pyproject.toml
src/celsiusbot/: data.py  main.py  models.py  plot.py  socket.py  tgbot.py
